# AI-News-Aggregator

./: README.md
backend/: .gitignore  .vercelignore  README.md  index.py  pyproject.toml  render.yaml  requirements.txt  start_api.py  vercel.json
backend/api/: index.py
backend/app/: api.py  config.py  daily_runner.py  manage_emails.py  runner.py
backend/app/agent/: curator_agent.py  digest_agent.py  email_agent.py
backend/app/database/: add_huggingface_papers_markdown.py  check_connection.py  connection.py  init_db.py  models.py  repository.py
backend/app/profiles/: user_profile.py
backend/app/scrapers/: anthropic.py  deepmind.py  google.py  huggingface.py  huggingface_papers.py  meta.py  mistral.py  mittr.py  openai.py  techcrunch.py  venturebeat.py  youtube.py
backend/app/services/: email.py  email_service.py  process_anthropic.py  process_curator.py  process_deepmind.py  process_digest.py  process_email.py  process_google.py  process_huggingface.py  process_huggingface_papers.py  process_meta.py  process_mistral.py  process_mittr.py  process_techcrunch.py  process_venturebeat.py  process_youtube.py
backend/app/utils/: markdown_converter.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Features.jsx  Footer.jsx  Hero.jsx  Navbar.jsx  SubscribeForm.jsx  UnsubscribeModal.jsx
frontend/src/utils/: api.js
